--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,12 +1,57 @@
+/* #region Variables */
+:root {
+  --fontStack: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --fontColorLight: rgba(235, 235, 235);
+  --fontColorDark: rgb(35, 35, 35);
+  --overlayDark: rgba(35, 35, 35, 0.75);
+  --overlay-dark: rgba(35, 35, 35, 0.15);
+
+  /* colors */
+  --light: #9894AA;
+  --lightRGB: 226, 218, 196;
+  --lightAccent: #827899;
+  --lightAccentRGB: 148, 153, 131;
+  --mainBrand: #E183B1;
+  --mainBrandRGB: 69, 93, 78;
+  --darkAccent: #763B44;
+  --darkAccentRGB: 126, 115, 102;
+  --dark: #39242B;
+  --darkRGB: 34, 26, 29;
+
+  /* sizes */
+  --margin: 1rem;
+  --padding: 1rem;
+}
+/* set default base size for deveice and reading distance */
+/* mobile */
+html {
+  font-size: 16px;
+}
+/* tablet */
+@media only screen and (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+/* desktop */
+@media only screen and (min-width: 1080px) {
+  html {
+    font-size: 22px;
+  }
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--dark);
 }
 article,
 aside,
@@ -230,8 +275,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--fontStack);
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
