--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -6,26 +6,32 @@ header {
 .logo-wrapper {
   margin: 0 auto;
   max-width: 960px;
-  padding: 1.45rem 1.0875rem;
+  padding: var(--padding);
 }
 
 .logo {
   margin: 0;
+  line-height: 1.618rem;
+  font-size: 1.618rem;
+  font-family: var(--fontDisplay);
+  font-weight: 500;
 }
 
 .logo a {
   color: var(--mainBrand);
+  text-shadow: 0 0 .5em rgba(var(--mainBrandRGB), 0.9);
   text-decoration: none;
 }
 
 nav {
-  background: var(--lightAccent)
+  background: var(--lightAccent);
 }
 
 .nav-ul {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   list-style: none;
+  margin: 0;
 }
 
 .nav-ul li a {
@@ -34,5 +40,9 @@ nav {
 }
 
 .nav-ul li {
-  margin-right: 1rem;
+  margin: .32rem;
+}
+
+.active {
+  color: var(--lightAccent);
 }
