--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,10 +1,32 @@
 .hero {
+  display: flex;
+  align-items: center;
   background-image: url(../images/hero.jpg);
   height: 20rem;
   width: 100%;
-  background-position: left center;
+  background-position: right center;
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: -1.45rem;
-  margin-bottom: 1.45rem; 
+  margin-bottom: 1.45rem;
+  font-family: var(--fontDisplay);
+  font-weight: bold;
+  padding: var(--padding);
+  font-size: 1.618rem;
+}
+
+.hero > div {
+  width: 50%;
+  color:var(--mainBrand);
+  margin-left: 2rem;
+  /* text-shadow: 0px 0px 5px rgba(var(--mainBrandRGB), 0.3); */
+}
+
+@media only screen and (max-width: 550px) {
+  .hero {
+    align-items: flex-start;
+  }
+  .hero > div {
+    margin-left: 0;
+  }
 }
